<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/newFragment">

    <fragment
        android:id="@+id/newFragment"
        android:name="pnzgu.rmp.fragmentslab.ui.newfragment.NewFragment"
        android:label="@string/title_newfrag"
        tools:layout="@layout/fragment_new" >
        <action
            android:id="@+id/action_newFragment_to_subFragment"
            app:destination="@id/subFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="pnzgu.rmp.fragmentslab.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="pnzgu.rmp.fragmentslab.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="pnzgu.rmp.fragmentslab.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/subFragment"
        android:name="pnzgu.rmp.fragmentslab.ui.subfragment.SubFragment"
        android:label="@string/title_subfragment" >
        <argument
            android:name="firstName"
            app:argType="string" />
        <argument
            android:name="secondName"
            app:argType="string" />
        <argument
            android:name="thirdName"
            app:argType="string" />
        <argument
            android:name="groupName"
            app:argType="string" />
    </fragment>
</navigation>